<package>
  <name>resources</name>
  <version>1.0.0</version>
  <description>resources</description>
  <maintainer email="prudhvi@teamauv.local">Prudhvi</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/resources</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Prudhvi</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lresources" cflags="-I${prefix}/include/"/>
</export>

</package>