<package>
  <name>control_server</name>
  <version>1.0.0</version>
  <description>control_server</description>
  <maintainer email="vinay@auviitkgp.local">Vinay Yadav</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/control_server</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Vinay Yadav</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>controller_basic</build_depend>
  <build_depend>kraken_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>resources</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>controller_basic</run_depend>
  <run_depend>kraken_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>resources</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>controller_basic</test_depend> -->
  <!-- <test_depend>kraken_msgs</test_depend> -->
  <!-- <test_depend>simulator_physics_model</test_depend> -->
  <!-- <test_depend>pose_server</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>resources</test_depend> -->

</package>