<package>
  <name>control_system_stack</name>
  <version>1.0.0</version>
  <description>iKAt</description>
  <maintainer email="teamauv@auviitkgp.local">Maintained by IIT Kharagpur AUV team</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/iit-kgp-auv-team/kraken_3.0/wiki</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by IIT Kharagpur AUV team</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>manual_control</run_depend>
  <run_depend>thruster_converter</run_depend>
  <run_depend>controller_basic</run_depend>
  <run_depend>absolute_rpy_publisher</run_depend>
  <run_depend>all_controllers</run_depend>
  <run_depend>keyboard_control</run_depend>
  <run_depend>control_server</run_depend>
  <run_depend>setyaw</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
