<package>
  <name>controller_basic</name>
  <version>1.0.0</version>
  <description>controller_basic</description>
  <maintainer email="vinay@auviitkgp.local">Vinay Yadav</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/controller_basic</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Vinay Yadav</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>kraken_msgs</build_depend>
  <build_depend>resources</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>kraken_msgs</run_depend>
  <run_depend>resources</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>kraken_msgs</test_depend> -->
  <!-- <test_depend>resources</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lPIDController -lStateController -lControlParameters" cflags="-I${prefix}/include/"/>
</export>

</package>