<package>
  <name>setyaw</name>
  <version>1.0.0</version>
  <description>setyaw</description>
  <maintainer email="siddharth@auviitkgp.local">Siddharth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/setyaw</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Siddharth</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kraken_msgs</build_depend>
  <build_depend>resources</build_depend>
  <build_depend>all_controllers</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kraken_msgs</run_depend>
  <run_depend>resources</run_depend>
  <run_depend>all_controllers</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>kraken_msgs</test_depend> -->
  <!-- <test_depend>resources</test_depend> -->
  <!-- <test_depend>all_controllers</test_depend> -->

</package>