<package>
  <name>pose_server</name>
  <version>1.0.0</version>
  <description>pose_server</description>
  <maintainer email="teamauv@teamauv.local">Vinay Yadav</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pose_server</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Vinay Yadav</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>kraken_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tracks_imu</build_depend>
  <build_depend>nqDVL</build_depend>
  <build_depend>resources</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>kraken_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tracks_imu</run_depend>
  <run_depend>nqDVL</run_depend>
  <run_depend>resources</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>kraken_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>tracks_imu</test_depend> -->
  <!-- <test_depend>NqDVL</test_depend> -->
  <!-- <test_depend>resources</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib" cflags="-I${prefix}/include/"/>
</export>

</package>