<package>
  <name>pose_server_python</name>
  <version>1.0.0</version>
  <description>pose_server_python</description>
  <maintainer email="teamauv@teamauv.local">Siddharth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pose_server_python</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Siddharth</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>resources</build_depend>
  <build_depend>kraken_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>resources</run_depend>
  <run_depend>kraken_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>resources</test_depend> -->
  <!-- <test_depend>kraken_msgs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

</package>