<package>
  <name>ip_msgs</name>
  <version>1.1.0</version>
  <description>actionmsg</description>
  <maintainer email="madhukar@auviitkgp.local">Madhukar</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/actionmsg</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Madhukar</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->

</package>
