<package>
  <name>msgs_stack</name>
  <version>1.1.0</version>
  <description>iKAt</description>
  <maintainer email="auviitkgp@auviitkgp.local">Maintained by IIT Kharagpur AUV team</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/iit-kgp-auv-team/kraken_3.0/wiki</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by IIT Kharagpur AUV team</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>ip_msgs</run_depend>
  <run_depend>kraken_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
