<package>
  <name>seabotix</name>
  <version>1.0.0</version>
  <description>seabotix</description>
  <maintainer email="vishnu@teamauv.local">vds</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/seabotix</url>
  <!-- <url type="bugtracker"></url> -->

  <author>vds</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kraken_msgs</build_depend>
  <build_depend>resources</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kraken_msgs</run_depend>
  <run_depend>resources</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>kraken_msgs</test_depend> -->
  <!-- <test_depend>resources</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->

</package>