<package>
  <name>joystick_control</name>
  <version>1.0.0</version>
  <description>joystick_control</description>
  <maintainer email="teamauv@auviitkgp.local">Nevin Valsaraj</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/joystick_control</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Nevin Valsaraj</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>kraken_msgs</build_depend>
  <build_depend>simulator_physics_model</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>resources</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>kraken_msgs</run_depend>
  <run_depend>simulator_physics_model</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>resources</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>kraken_msgs</test_depend> -->
  <!-- <test_depend>simulator_physics_model</test_depend> -->
  <!-- <test_depend>joy</test_depend> -->
  <!-- <test_depend>resources</test_depend> -->

</package>
