<package>
  <name>kraken_visualization</name>
  <version>1.0.0</version>
  <description>kraken_visualization</description>
  <maintainer email="teamauv@auviitkgp.local">Vinay Yadav</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kraken_visualization</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Vinay Yadav</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>uwsim</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>uwsim</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>urdf</test_depend> -->
  <!-- <test_depend>xacro</test_depend> -->
  <!-- <test_depend>uwsim</test_depend> -->

</package>
