<package>
  <name>simulator_physics_model</name>
  <version>1.0.0</version>
  <description>simulator_physics_model</description>
  <maintainer email="teamauv@auviitkgp.local">Prudhvi</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/simulator_physics_model</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Prudhvi</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kraken_msgs</build_depend>
  <build_depend>tracks_imu</build_depend>
  <build_depend>resources</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kraken_msgs</run_depend>
  <run_depend>tracks_imu</run_depend>
  <run_depend>resources</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>kraken_msgs</test_depend> -->
  <!-- <test_depend>tracks_imu</test_depend> -->
  <!-- <test_depend>resources</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib" cflags="-I${prefix}/include/"/>
</export>

</package>
